2009-08-12  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/ffi.ss: Allow bytevector can be passed to void*.

	* OSCompat.cpp (write): Handled Emacs.

	* OSCompatSocket.h: Added include wspiapi.h.

2009-08-11  higepon  <higepon@users.sourceforge.jp>

	* test/test.bat: Added test for ";" separated loadpaths.

	* Makefile.am (test): Added test for ":" separated loadpaths.

	* test/mysql.scm: Fixe test/mysql.ss (Issue 85).

	* scanner.re (Scanner): Added '-' to shebang character.

2009-08-10  higepon  <higepon@users.sourceforge.jp>

	* scheme.cpp (mosh_init): Ctrl-c for Windows.

	* configure.ac (CXXFLAGS): Commente out Gauche check.

	* win/include/config.h (VERSION): Changed VERSION for Windows.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: Added space to repl ">mosh" => ">mosh " thanks to http://pc12.2ch.net/test/read.cgi/tech/1248657331/240.

2009-08-07  higepon  <higepon@users.sourceforge.jp>

	* RELNOTE: Updated RELNOTE for the next release.

2009-08-06  OKUMURA Yuki

	* FFIProcedures.cpp : Win32 MSVC.

2009-08-06  higepon  <higepon@users.sourceforge.jp>

	* Makefile.am (install-data-hook): Fixed a premission problem on installation.

2009-08-04  higepon  <higepon@users.sourceforge.jp>

	* RELNOTE: Updated for next release.

	* Check lists are same length on map, for-each, for-all, exists, fold-right, and fold-left. (Issue 31 pointed out by leque).

2009-08-03  higepon  <higepon@users.sourceforge.jp>

	* OSCompat.cpp (nativeTranscoder): Change the error policy to RAISE_ERROR. (Issue 80).

	* UTF8Codec.cpp : Fixed short cut bug.

2009-08-02  OKUMURA Yuki <mjt@cltn.org>
	
        * configure.ac : implies port specific options (gc-7.1 win32 threads /
	gc-7.2 will fix this)

2009-07-31  higepon  <higepon@users.sourceforge.jp>

	* StringProcedures.cpp : Fixed string-set didn't check index.
	                         Fixed make-string didn't check size.

	* lib/lambda/wiki.ss : Delete on empty body.

	* lib/lambda/wiki.ss : Added backup function.
